@@ -1,3 +1,6 @@
+2016/08/22: IGAS v108
+    1. Fix for custom handler, bag handler and bagslot handler.
+
 2016/08/15: IGAS v107
     1. Fix the bagslot won't display count when first login.
 
